name:                tweed
version:             0.1.0.0
synopsis:            Access twitter over DNS
-- description:         
license:             mit
license-file:        LICENSE
author:              Mark Drago
maintainer:          markdrago@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable tweed
  main-is:             tweed.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       network >= 2.5,
                       bytestring >= 0.10,
                       dns >= 1.4,
                       utf8-string
  -- hs-source-dirs:      
  default-language:    Haskell2010
