name:                tweed
version:             0.1.0.0
synopsis:            Access twitter over DNS
-- description:         
license:             MIT
license-file:        LICENSE
author:              Mark Drago
maintainer:          markdrago@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable tweed
  hs-source-dirs: src
  main-is:             tweed.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 4.8
                     , network >= 2.5
                     , bytestring >= 0.10
                     , dns >= 1.4
                     , utf8-string

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 4.8
                     , tasty
                     , tasty-hunit
                     , network >= 2.5
                     , bytestring >= 0.10
                     , dns >= 1.4
                     , utf8-string